--- a/frontendapi/src/app/components/login/login.component.html
+++ b/frontendapi/src/app/components/login/login.component.html
@@ -1,1 +1,43 @@
-<p>login works!</p>
+<div class="login">
+    <div class="form">
+      <form [formGroup]="loginForm"  (submit)="autentication()" class="login-form">
+        <h1 class="material-icons">Bienvenido a los contactos de ITA</h1>
+        
+        <div class="container mb-3">
+
+          <input type="email" formControlName="email" placeholder="alguien@example.com ">
+          <div *ngIf="email?.dirty &&(email?.dirty || email?.touched)">
+          <div id="MensajeTiendaNew"*ngIf="loginForm.get('email')?.hasError('required')">
+          <p>el correo es <strong>obligatorio</strong></p>
+          </div>
+          <div class="container mb-3">
+          <div id="MensajeTiendaNew"
+          *ngIf="loginForm.get('email')?.hasError('email')">
+          <p>debe propocionar un correo <strong>válido</strong></p>
+          </div>
+       </div>
+          </div>
+      </div>
+
+
+      <div class="container mb-3">
+
+        <input formControlName="password" type="password" placeholder="Contraseña" required />
+        <div *ngIf="password?.dirty &&(password?.dirty || password?.touched)">
+          <div class="container mb-3">
+          <div id="MensajeTiendaNew" *ngIf="loginForm.get('password')?.hasError('password')">
+        <p>la conntraseña es un campo <strong>obligatorio</strong></p>
+        </div>
+          </div>
+       
+     </div>
+    </div>
+       
+        <button>Entrar</button> 
+        
+       
+      </form>  
+      <br>
+      <button>Registrarse</button> 
+    </div>
+  </div>
