--- a/frontendapi/src/app/components/home/home.component.css
+++ b/frontendapi/src/app/components/home/home.component.css
@@ -176,3 +176,89 @@
     left: 2em;
     top: 3.7em;
   }
+
+  
+  *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+body{
+    background: #f3f5f9;
+}
+
+.container .sidebar{
+    position: fixed;
+    width: 150px;
+    height: 100%;
+    background: #3B5998;
+    padding: 30px 0;
+}
+.container .sidebar h2{
+    color: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.container .sidebar h2 span{
+    color: #f2b354;
+}
+.container .sidebar h2 span:hover{
+    color: #fff;
+    transition: .5s;
+}
+.container .sidebar h2:hover{
+    color: #f2b354;
+}
+.container .sidebar ul li a{
+    color: #fff;
+}
+.container .sidebar ul li{
+    padding: 15px;
+    border-bottom: 1px solid black;
+    transition: .5s;
+}
+.container .sidebar ul li:hover{
+    background: black;
+}
+.container .sidebar .social-media{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+}
+.container .sidebar .social-media a{
+    display: block;
+    width: 40px;
+    background: black;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    margin: 0 5px;
+    color: #bdb8d7;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    transition: .5s;
+}
+.container .sidebar .social-media a:hover{
+    background-color: #3B5998;
+}
+.container .main-content{
+    margin-left: 200px;
+}
+.container .main-content .header{
+    padding: 20px;
+    background: #fff;
+    color: #717171;
+}
+.container .main-content .info{
+    margin: 20px;
+    color: #717171;
+    line-height: 25px;
+}
