--- a/frontendapi/src/app/components/home/home.component.html
+++ b/frontendapi/src/app/components/home/home.component.html
@@ -1,5 +1,26 @@
 
-  
+    <div class="container">
+        <div class="sidebar">
+            <h2><span>Side</span>Bar</h2>
+            <ul>
+                <li><a routerLink="/home"><i class="fas fa-home"></i> home</a></li>
+                <li><a  routerLink="/home"><i class="fas fa-user"></i> completa tu perfil</a></li>
+                <li><a  routerLink="/home"><i class="fa-solid fa-star"></i> tus favoritos</a></li>
+
+                <li><a (click)="closesecion()"><i  class="fa-solid fa-right-to-bracket"></i> salir</a></li>
+
+               
+            </ul>
+         
+        </div>
+        <div class="nain-content">
+            <div class="header"></div>
+            <div class="info">
+            </div>
+        </div>
+
+
+    
   <div class="product-container">
 
    
@@ -9,9 +30,13 @@
       <p class="per-price"> <strong>Species : </strong>{{per.species}}</p>
       <p class="per-price"><strong>status : </strong>{{per.status}}</p>
       <p class="per-price"> <strong>Grender :</strong>{{per.gender}} </p>
+
+      <li><a (click)="closesecion()"><i  class="fa-sharp fa-solid fa-heart"></i></a></li>
+
+     
       <br>
   
     </div>
   </div>    
  
-     
+    </div>
