--- a/frontendapi/src/app/components/login/login.component.html
+++ b/frontendapi/src/app/components/login/login.component.html
@@ -38,6 +38,6 @@
        
       </form>  
       <br>
-      <button>Registrarse</button> 
+      <button routerLink="/registro">Registrarse</button> 
     </div>
   </div>
